# Advent-of-Code

./: LICENSE  README.md  common.py  oop.py  rocket.py  scratchpad.py  template.py
AOC_2021/: README.md  dijkstra.py  various_ways_opening_the_input_file.py
AOC_2021/Day-01-Sonar-Sweep/: day1.py
AOC_2021/Day-02-Dive/: day2.py
AOC_2021/Day-03-Binary-Diagnostic/: alternative_python_solution.py  day3.py  input copy.txt  input.txt
AOC_2021/Day-04-Giant-Squid/: alternativie_solution.py  day4.py  test.py  (+1 more)
AOC_2023/: AOC_2023_Disscussion_Notes.org  CMakeCache.txt  CMakeLists.txt  Day02.cpp  Day03.cpp  Day04.cpp  Day05-Sample-1.cpp  Day05-Sample-2.c  Day05.cpp  Day06-Sample-1.c  Day06.cpp  Day07.c  Day08.c  Day09-copy.c  Day09.c  Day10.c  Day_1.cpp  Day_1_answer.cpp  Makefile  cmake_install.cmake  compile_commands.json  main
AOC_2023/.cache/clangd/index/: Day03.cpp.5A372D39D89269DB.idx  Day04.cpp.27782A148E392A03.idx  Day05-Sample-1.cpp.B2F0BD1C6C06C095.idx  Day05.cpp.68799CCC31EDD83E.idx  Day06.cpp.E839656E5C56E854.idx  Day_1.cpp.D56262EE89BEA8BC.idx  Day_2a.cpp.A0B0DA7042CFCB37.idx  MyMath.hpp.E68381A2078E0097.idx  algorithm.CAC67E6506C85FA4.idx  assert.8AC9FAAF07F5685B.idx  byte.B89F936013C72711.idx  gsl.D575058FE2E3A313.idx  narrow.F51B3659E368E014.idx  pointers.288D2F18B082234E.idx  span.5DBD5EC2F427D9DA.idx  span_ext.A571A29BC14A8DBB.idx  string_span.7A076391D099F348.idx  util.9400306E99D77667.idx
AOC_2023/data/: day2b.txt:Zone.Identifier  day5b.txt:Zone.Identifier  day6b.txt:Zone.Identifier  day9b.txt:Zone.Identifier
AOC_2023/header_files/: MyMath.hpp  debug.h
(+209 files in other folders)
